--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -10,6 +10,7 @@
     <string name="first_trust">First Trust</string>
     <string name="halifax">Halifax</string>
     <string name="hsbc">HSBC</string>
+    <string name="lloyds">Lloyds</string>
     <string name="nationwide">Nationwide</string>
     <string name="natwest">Natwest</string>
     <string name="rbos">Royal Bank of Scotland</string>
@@ -33,5 +34,7 @@
     <string name="placeholder_address_postcode">Postcode: %s</string>
     <string name="placeholder_minimum_value">Minimum Value Dispensed: %s</string>
     <string name="placeholder_currency">Currency: %s</string>
+    <string name="placeholder_postcode">Postcode: :%s</string>
+    <string name="placeholder_location_type">Location Type: %s</string>
 
 </resources>
